--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,6 +15,7 @@ install:
   - node --version
   - npm --version
   - npm install
+  - npm install hexo-generator-json-content
   - npm install hexo-cli -g
 
 build_script:
