--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,7 @@ branches:
 
 environment:
   access_token:
-    nodejs_version: "6"
+    nodejs_version: "9.5.0"
     secure: LjykSmsHe8K2gneHXqRWFZKG0lBRH0Igrz4cyf/cwsMbiddLjKHZnufpJv3VgObY
 
 install:
@@ -29,7 +29,7 @@ on_success:
   - ps: Add-Content "$env:USERPROFILE\.git-credentials" "https://$($env:access_token):x-oauth-basic@github.com`n"
   - git config --global user.email "%GIT_USER_EMAIL%"
   - git config --global user.name "%GIT_USER_NAME%"
-  - git clone --depth 5 -q --branch=%TARGET_BRANCH% %STATIC_SITE_REPO% %TEMP%\static-site
+  - git clone --depth 5 --recurse-submodules -q --branch=%TARGET_BRANCH% %STATIC_SITE_REPO% %TEMP%\static-site
   - cd %TEMP%\static-site
   - del * /f /q
   - for /d %%p IN (*) do rmdir "%%p" /s /q
